v12/fixtures/ast/errors/alias_reexport_impl_ambiguity/source.able
package alias_reexport_impl_ambiguity_main

import alias_reexport_impl_ambiguity_base.{Widget}
import alias_reexport_impl_ambiguity_a
import alias_reexport_impl_ambiguity_b

w := Widget { value: 1 }
w.tag()
